* add object library

--- a/EzExplore/CMakeLists.txt
+++ b/EzExplore/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_executable(EzExplore "main.cpp" "ExploreErrors.h" "ExploreFile.cpp" "ExploreFile.h")
+add_library(EzExplore_object OBJECT "ExploreErrors.h" "ExploreFile.cpp" "ExploreFile.h")
+add_executable(EzExplore_test "main.cpp" "ExploreErrors.h" "ExploreFile.cpp" "ExploreFile.h")
